# ducky-ml

./: .gitignore  README.md  pyproject.toml
ducky/: App.js  app.json  package-lock.json  package.json
ducky/app/: App.js  Styles.js
ducky/app/components/: Account.js  Dock.js  KeyboardShift.js
ducky/app/screens/: AccountInfo.js  Analytics.js  Data.js  Ducky.js  Goals.js  HabitTracker.js  Home.js  Journal.js  JournalEntry.js  JournalEntryExample.js  Name.js  Notifications.js  Onboard.js  Privacy.js  Profile.js  Tracker.js
notebooks/: bert_emotion_tests.ipynb
