[tool.poetry]
name = "ducky-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.10"
numpy = "^1.19.0"
pandas = "^1.0.5"
sklearn = "^0.0"
matplotlib = "^3.2.2"
torch = "^1.5.1"
torchvision = "^0.6.1"
tensorflow = "^2.2.0"
transformers = "^3.0.2"
seaborn = "^0.10.1"
tqdm = "^4.47.0"
jupyter = "^1.0.0"
ipython = "^7.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
